--- a/Flowers Store/flower.html
+++ b/Flowers Store/flower.html
@@ -66,7 +66,7 @@
   <main>
     <section class="flower-product new-section section-white">
       <div class="flower-product-image">
-        <img src="./img/Boquet10.jpg" alt="Flower">
+        <img src="./img/Boquet10.jpg" alt="Flower" height="300">
         <div class="scrollables">
           <span></span>
           <span></span>
@@ -186,57 +186,6 @@
         </div>
         <a href="./catalog.html" class="see-more">See more</a>
       </div>
-    </section>
-    <section class="client-gallery new-section">
-      <div class="client-gallery-top">
-        <h2>Clients Love Us</h2>
-        <div>
-          <span>
-            &#10094;
-          </span>
-          <span>
-            &#10095;
-          </span>
-        </div>
-      </div>
-      <div class="testimonials w-100">
-        <div class="customer-one section-white">
-          <div class="customer-details">
-            <div class="customer-pic"></div>
-            <div>
-              <h4>Katherine</h4>
-              <p>Customer since 2014</p>
-              <ul class="customer-social">
-                <li><a href="#"><img src="./img/vk.svg" alt="VK logo"></a></li>
-                <li><a href="#"><img src="./img/facebook.svg" alt="facebook logo"></a></li>
-              </ul>
-            </div>
-          </div>
-          <p class="testimony">"I would gladly pay over 600 dollars for UniFlower. I am so pleased with this product.
-            The service was excellent."</p>
-        </div>
-        <div class="customer-two section-white">
-          <div class="customer-details">
-            <div class="customer-pic"></div>
-            <div>
-              <h4>Nikki</h4>
-              <p>Customer since 2018</p>
-              <ul class="customer-social">
-                <li><a href="#"><img src="./img/vk.svg" alt="VK logo"></a></li>
-                <li><a href="#"><img src="./img/facebook.svg" alt="facebook logo"></a></li>
-              </ul>
-            </div>
-          </div>
-          <p class="testimony">"I would gladly pay over 600 dollars for UniFlower. I am so pleased with this product.
-            The service was excellent."</p>
-        </div>
-      </div>
-    </section>
-    <section class="google-maps">
-      <h2 class="d-none">Google Maps</h2>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2474.722900280973!2d126.90609738908823!3d37.547827988305706!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6058954f87325221!2sYG%20Entertainment!5e0!3m2!1sen!2sus!4v1579120722274!5m2!1sen!2sus"
-        width="600" height="450" style="border: 0;" allowfullscreen=""></iframe>
     </section>
   </main>
   <footer class="section-white">
